@@ -3,4 +3,5 @@ Makefile.in
 pod2htmi.tmp
 pod2htmd.tmp
 *.txt
+*.pod
 
